--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+html {
+  box-sizing: border-box;
+}
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 body {
+  padding: 0;
+  margin: 0;
   background-color: #849d8f;
+}
+.site-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.container {
+  padding: 0 27px;
 }
