--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
+@font-face {
+  font-family: 'Roboto';
+  src: local('Roboto'), local('Roboto-Regular'),
+  url('subset-Roboto-Regular.woff2') format('woff2'),
+  url('subset-Roboto-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: local('Roboto Medium'), local('Roboto-Medium'),
+  url('subset-Roboto-Medium.woff2') format('woff2'),
+  url('subset-Roboto-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: local('Roboto Bold'), local('Roboto-Bold'),
+  url('subset-Roboto-Bold.woff2') format('woff2'),
+  url('subset-Roboto-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
 html {
   box-sizing: border-box;
 }
@@ -7,6 +31,10 @@ html {
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', 'Arial', sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  color: #5a5a5a;
   background-color: #849d8f;
 }
 .site-wrapper {
