--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,273 @@ body {
   color: #5a5a5a;
   background-color: #849d8f;
 }
+a {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  line-height: 18px;
+  color: #fff;
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: #ffbc9e;
+  border-bottom-color: rgba(255, 188, 158, 0.3);
+}
 .site-wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
 .container {
   padding: 0 27px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px; 
+  height: 1px; 
+  padding: 0;
+  border: 0;
+  margin: -1px;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
+/* Button */
+.button {
+  display: inline-block;
+  vertical-align: baseline;
+  padding: 11px 25px;
+  border: none;
+  border-radius: 20px;
+  background-image: linear-gradient(to bottom, #f26843, #e74a35);
+  color: #fefefe;
+  font-size: 18px;
+  font-weight: bold;
+  box-shadow: 0px 1px 2px 0 #ac1000;
+  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  cursor: pointer;
+}
+.button:hover,
+.button:focus {
+  background-image: 
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
+    linear-gradient(to bottom, #f26843, #e74a35);
+  outline: 0;
+}
+.button:active {
+  background-image: 
+    linear-gradient(to bottom, #e74a35, #f26843), 
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07));
+}
+/* =============
+  SITE-HEADER
+  ============== */
+.site-header {
+  padding-top: 10px;
+}
+.logo {
+  margin-right: 10px;
+  border-bottom: 0;
+}
+.logo img {
+  vertical-align: middle;
+}
+.site-navigation {
+  display: flex;
+  align-items: center;
+}
+.site-navigation__dropdown {
+  position: absolute;
+  top: 100%;
+  display: none;
+  padding: 20px 16px;
+  border-radius: 5px;
+  background-color: #f8f7f4;
+  color: #999;
+  font-size: 14px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+.site-navigation__dropdown input {
+  padding: 7px 15px;
+  border: 1px solid #d3d3d2;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  line-height: 24px;
+}
+.site-navigation__dropdown input:hover {
+  border-color: #9a9a9a;  
+  box-shadow: inset 0 0 0 1px #9a9a9a;
+}
+.site-navigation__dropdown input:focus {
+  outline: 0;
+  border-color: rgba(46, 136, 228, 0.52);
+  box-shadow: inset 0 0 0 1px rgba(46, 136, 228, 0.52);
+}
+/* Main navigation */
+.main-navigation {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  margin-right: auto;
+  list-style-type: none;
+}
+.main-navigation__item {
+  position: relative;
+}
+.main-navigation__item > a {
+  display: block;
+  position: relative;
+  padding: 7px 14px;
+  border-bottom: none;
+  margin-bottom: 5px;
+  border-radius: 15px;
+  font-weight: bold;
+  line-height: 18px;
+}
+.main-navigation__item > a:hover,
+.main-navigation__item > a:focus {
+  background-color: #fff;
+  color: #323232;
+}
+.main-navigation__item > a:active {
+  background-color: #ededed;
+  box-shadow: inset 0 2px 1px #696969;
+}
+.main-navigation__item.active > a {
+  background-color: #d07058;
+  color: #fff;
+}
+.main-navigation__submenu {
+  left: -5px;
+  min-width: 143px;
+  padding: 7px 0;
+}
+.main-navigation__item:hover .main-navigation__submenu {
+  display: block;
+}
+.submenu__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.submenu__link {
+  display: block;
+  padding: 7px 20px;
+  border-bottom: 0;
+  color: #323232;
+}
+.submenu__link:hover,
+.submenu__link:focus {
+  background-color: #fbded7;
+  color: #323232;
+}
+.submenu__link:active {
+  background-color: #f6b5a5;
+}
+.submenu__item.active .submenu__link {
+  background-color: #d07058;
+  color: #fff;
+}
+.main-navigation__submenu hr {
+  width: 128px;
+  height: 1px;
+  margin: 10px auto;
+  background-color: #d1d0ce;
+  border: none;
+}
+.user-navigation {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.user-navigation__item {
+  position: relative;
+  margin-left: 10px;
+}
+.user-navigation__item-link {
+  display: flex;
+  align-items: center;
+  padding: 7px 16px;
+  border-bottom: none;
+  margin-bottom: 5px;
+  border-radius: 15px;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.user-navigation__item > a:hover,
+.user-navigation__item > a:focus {
+  background-color: #fff;
+  color: #323232;
+}
+.user-navigation__item--search > a {
+  width: 32px;
+  height: 32px;
+  padding: 7px;
+}
+.user-navigation__item--search:hover > a {
+  background-color: #fff;
+}
+.user-navigation__item--search:hover path {
+  fill: #323232;
+}
+.search-form-wrapper {
+  right: 0;
+}
+.search-form-wrapper .search-input {
+  width: 311px;
+  margin-bottom: 0;
+}
+.user-navigation__item--search:hover .search-form-wrapper {
+  display: block;
+}
+.user-navigation__item--login svg {
+  margin-right: 7px;
+}
+.user-navigation__item--login path {
+  fill: #fff;
+}
+.user-navigation__item--login:hover path {
+  fill: #323232;
+}
+.login-form-wrapper {
+  right: -2px;
+}
+.user-navigation__item--login:hover .login-form-wrapper {
+  display: block;
+}
+.login-form-wrapper input {
+  width: 240px;
+}
+.login-form-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 13px;
+}
+.login-form-bottom__links {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.login-form-bottom__links a {
+  color: #323232;
+  border-bottom-color: #323232;
+}
+.site-header__contacts {
+  text-align: right;
+  color: #fff;
+  font-weight: bold;
+}
+.site-header__contacts .working-hours {
+  margin-top: -3px;
+  margin-bottom: 4px;
+  font-size: 14px;
+}
+.site-header__contacts .phone {
+  font-size: 22px;
+  border-bottom: 0;
+}
+.site-header__contacts .phone:hover {
+  color: #fff;
 }
