--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ a:focus {
   border: none;
   border-radius: 20px;
   background-image: linear-gradient(to bottom, #f26843, #e74a35);
-  color: #fefefe;
+  color: #fff; 
   font-size: 18px;
   font-weight: bold;
   box-shadow: 0px 1px 2px 0 #ac1000;
@@ -85,6 +85,7 @@ a:focus {
 }
 .button:hover,
 .button:focus {
+  color: #fff; 
   background-image: 
     linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
     linear-gradient(to bottom, #f26843, #e74a35);
@@ -94,6 +95,13 @@ a:focus {
   background-image: 
     linear-gradient(to bottom, #e74a35, #f26843), 
     linear-gradient(to bottom, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07));
+}
+.close-button {
+  display: inline-block;
+  vertical-align: baseline;
+  border: none;
+  background-color: none;
+  cursor: pointer;
 }
 /* =============
   SITE-HEADER
@@ -329,6 +337,66 @@ a:focus {
 }
 .user-navigation__item--cart.not-empty svg {
   display: none;
+}
+.user-navigation__item--cart:hover .cart-list-dropdown {
+  display: block;
+}
+.cart-list-dropdown {
+  right: 0;
+  text-align: right;
+}
+.cart__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.cart__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  font-size: 13px;
+  line-height: 16px;
+  text-align: left;
+  color: #323232;
+}
+.cart__item * {
+  flex-shrink: 0;
+}
+.cart__item .close-button {
+  width: 11px;
+  height: 11px;
+  margin-right: 14px;
+  background: url('../img/cross-small.svg') no-repeat center center;
+}
+.cart__item-img {
+  margin-right: 14px;
+}
+.cart__item-name {
+  width: 230px;
+  margin-right: 12px;
+  font-weight: normal;
+}
+.cart__item-calculation {
+  min-width: 100px;
+  margin-right: 30px;
+}
+.cart__item-price {
+  color: #999;
+}
+.cart__item-total {
+  min-width: 50px;
+  margin-right: 20px;
+}
+.cart-list-dropdown hr {
+  height: 1px;
+  border: none;
+  margin: 15px auto;
+  background-color: #cacac7;
+}
+.cart__total {
+  font-size: 15px;
+  font-weight: bold;
+  color: #323232;
 }
 /* Site-header contacts */
 .site-header__contacts {
