--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ a:focus {
   display: inline-block;
   vertical-align: baseline;
   border: none;
-  background-color: none;
+  background-color: transparent;
   cursor: pointer;
 }
 /* =============
@@ -177,6 +177,7 @@ a:focus {
 /* Site navigation dropdowns */
 .site-navigation__dropdown {
   position: absolute;
+  z-index: 1;
   top: 100%;
   display: none;
   padding: 20px 16px;
@@ -416,4 +417,81 @@ a:focus {
 .site-header__contacts .phone:hover,
 .site-header__contacts .phone:focus {
   color: #fff;
+}
+/* MODALS */
+.modal__overlay {
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.modal {
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  z-index: 5;
+  display: none;
+  width: 478px;
+  padding: 18px 24px;
+  margin-left: -239px;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+}
+.modal--shown,
+.modal--shown .modal {
+  display: block;
+}
+.modal .close-button {
+  position: absolute;
+  top: 17px;
+  right: 17px;
+  width: 18px;
+  height: 17px;
+  background-image: url('../img/cross-big.svg');
+}
+.modal__title {
+  margin-top: 0;
+  margin-bottom: 22px;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: bold;
+  color: #323232;
+}
+.modal__form .input-group {
+  margin-bottom: 20px;
+}
+.modal__form input,
+.modal__form textarea {
+  width: 267px;
+  padding: 10px 15px;
+  border: 1px solid rgba(178, 178, 178, 0.52);
+  border-radius: 5px;
+  font-size: 16px;
+  color: #999;
+}
+.modal__form textarea {
+  display: block;
+  width: 100%;
+  min-height: 155px;
+  resize: vertical;
+}
+.modal__form input:hover,
+.modal__form textarea:hover {
+  border-color: #9a9a9a;  
+  box-shadow: inset 0 0 0 1px #9a9a9a;
+}
+.modal__form input:focus,
+.modal__form textarea:focus {
+  outline: 0;
+  border-color: rgba(46, 136, 228, 0.52);
+  box-shadow: inset 0 0 0 1px rgba(46, 136, 228, 0.52);
+}
+.modal__form .submit-area {
+  margin-top: 25px;
+  margin-bottom: 4px;
+  text-align: right;
 }
