--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,24 @@
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto'), local('Roboto-Regular'),
-  url('subset-Roboto-Regular.woff2') format('woff2'),
-  url('subset-Roboto-Regular.woff') format('woff');
+  url('../fonts/Roboto-Regular.woff2') format('woff2'),
+  url('../fonts/Roboto-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto Medium'), local('Roboto-Medium'),
-  url('subset-Roboto-Medium.woff2') format('woff2'),
-  url('subset-Roboto-Medium.woff') format('woff');
+  url('../fonts/Roboto-Medium.woff2') format('woff2'),
+  url('../fonts/Roboto-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto Bold'), local('Roboto-Bold'),
-  url('subset-Roboto-Bold.woff2') format('woff2'),
-  url('subset-Roboto-Bold.woff') format('woff');
+  url('../fonts/Roboto-Bold.woff2') format('woff2'),
+  url('../fonts/Roboto-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
