--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,6 @@ body {
   font-size: 16px;
   line-height: 22px;
   color: #5a5a5a;
-  background-color: #849d8f;
 }
 a {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -49,11 +48,50 @@ a:focus {
   border-bottom-color: rgba(255, 188, 158, 0.3);
 }
 .site-wrapper {
-  max-width: 1200px;
+  min-width: 940px;
   margin: 0 auto;
+  background-image: url('../img/slider-1.png');
+  background-repeat: no-repeat;
+  background-position: center top;
+  transition: background-image 0.5s ease, background-color 0.5s ease;
+}
+.site-wrapper::before,
+.site-wrapper::after {
+  content: "";
+  visibility: hidden;
+}
+.site-wrapper::before {
+  background-image: url('../img/slider-2.png');
+}
+.site-wrapper::after {
+  background-image: url('../img/slider-3.png');
+}
+#product-1:checked ~ .site-wrapper {
+  background-color: #849d8f;
+  background-image: url('../img/slider-1.png');
+}
+#product-2:checked ~ .site-wrapper {
+  background-color: #8996a6;
+  background-image: url('../img/slider-2.png');
+}
+#product-3:checked ~ .site-wrapper {
+  background-color: #9d8b84;
+  background-image: url('../img/slider-3.png');
+}
+#product-1:checked ~ .site-wrapper #slide1,
+#product-2:checked ~ .site-wrapper #slide2,
+#product-3:checked ~ .site-wrapper #slide3 {
+  display: block;
+}
+#product-1:checked ~ .site-wrapper label[for="product-1"],
+#product-2:checked ~ .site-wrapper label[for="product-2"],
+#product-3:checked ~ .site-wrapper label[for="product-3"] {
+  background-color: #fff;
 }
 .container {
+  max-width: 1200px;
   padding: 0 27px;
+  margin: 0 auto;
 }
 .visually-hidden {
   position: absolute;
@@ -71,25 +109,28 @@ a:focus {
 /* Button */
 .button {
   display: inline-block;
-  vertical-align: baseline;
-  padding: 11px 25px;
+  vertical-align: top;
+  padding: 10px 25px;
   border: none;
-  border-radius: 20px;
+  border-radius: 50px;
+  background-color: #f26843;
   background-image: linear-gradient(to bottom, #f26843, #e74a35);
   color: #fff; 
   font-size: 18px;
+  line-height: 24px;
   font-weight: bold;
   box-shadow: 0px 1px 2px 0 #ac1000;
   text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  text-decoration: none;
   cursor: pointer;
 }
 .button:hover,
 .button:focus {
   color: #fff; 
+  background-color: #e74a35;
   background-image: 
     linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
     linear-gradient(to bottom, #f26843, #e74a35);
-  outline: 0;
 }
 .button:active {
   background-image: 
@@ -101,6 +142,7 @@ a:focus {
   vertical-align: baseline;
   border: none;
   background-color: transparent;
+  font-size: 0;
   cursor: pointer;
 }
 /* =============
@@ -154,7 +196,6 @@ a:focus {
 .main-navigation__link:focus {
   background-color: #fff;
   color: #323232;
-  outline: 0;
 }
 .main-navigation__link:hover::after,
 .main-navigation__link:focus::after {
@@ -270,7 +311,6 @@ a:focus {
 .user-navigation__link:focus {
   background-color: #fff;
   color: #323232;
-  outline: 0;
 }
 .user-navigation__item:hover path,
 .user-navigation__link:focus path,
@@ -417,6 +457,52 @@ a:focus {
 .site-header__contacts .phone:hover,
 .site-header__contacts .phone:focus {
   color: #fff;
+}
+/* SLIDER */
+.slider {
+  position: relative;
+  padding-top: 274px;
+  text-align: center;
+  color: #fff;
+}
+.slider__controls {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  z-index: 1;
+  font-size: 0;
+}
+.slider__controls label {
+  display: inline-block;
+  vertical-align: top;
+  width: 21px;
+  height: 21px;
+  border: 2px solid #ffffff;
+  margin-right: 9px;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+}
+.slider__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.slide {
+  display: none;  
+}
+.slide .button {
+  padding: 10px 40px;
+  font-size: 32px;
+  line-height: 44px;
+}
+.slide__title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 700;
 }
 /* MODALS */
 .modal__overlay {
