--- a/css/styles.css
+++ b/css/styles.css
@@ -392,6 +392,7 @@ img {
   display: block;
 }
 .cart-list-dropdown {
+  width: 540px;
   right: 0;
   text-align: right;
 }
@@ -604,14 +605,17 @@ img {
 }
 .product__img-wrapper {
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 14px;
 }
 .product__img {
+  width: 267px;
+  height: 267px;
+  vertical-align: middle;
   border-radius: 50%;
 }
 .product__price {
   position: absolute;
-  bottom: 13px;
+  bottom: 7px;
   margin: 0;
   font-size: 45px;
   line-height: 45px;
